@@ -4,6 +4,7 @@ import be.kdg.ip3.archportal.profiles.domain.Library.Game;
 import be.kdg.ip3.archportal.profiles.domain.friendRequest.FriendRequest;
 import be.kdg.ip3.archportal.profiles.domain.profile.Profile;
 import be.kdg.ip3.archportal.profiles.domain.profile.ProfileId;
+import be.kdg.ip3.archportal.profiles.domain.profile.Section;
 import be.kdg.ip3.archportal.profiles.infrastructure.friendRequest.jpa.JpaFriendRequest;
 import jakarta.persistence.*;
 import lombok.Getter;
@@ -54,7 +55,7 @@ public class JpaProfileEntity {
 
 
     @ElementCollection
-    @CollectionTable(name = "profile_library", joinColumns = @JoinColumn(name = "profile_id"), schema = "profileservice")
+    @CollectionTable(name = "profile_library", schema = "profileservice", joinColumns = @JoinColumn(name = "profile_id"))
     private List<JpaGameEntity> games = new ArrayList<>();
 
     @ElementCollection
@@ -62,15 +63,30 @@ public class JpaProfileEntity {
             uniqueConstraints = @UniqueConstraint(
                     name = "uq_friend_request_sender_receiver",
                     columnNames = {"sender_id", "receiver_id"}
-            ))
+            )
+    )
     private Set<JpaFriendRequest> incomingRequests = new HashSet<>();
 
-    public JpaProfileEntity() {
-    }
+    @ElementCollection
+    @CollectionTable(name = "profile_sections", schema = "profileservice", joinColumns = @JoinColumn(name = "profile_id"))
+    private List<JpaSectionEntity> sections = new ArrayList<>();
 
-    public JpaProfileEntity(UUID id, String firstName, String lastName, String email, String icon, String gamerTag,
-                            int platformPoints, Set<UUID> platformBenefits, List<JpaGameEntity> library,
-                            Set<JpaFriendRequest> incomingRequests, String originalIcon, UUID activeProfilePictureId, UUID activeUsernameColorId) {
+    protected JpaProfileEntity() {}
+
+    public JpaProfileEntity(
+            UUID id,
+            String firstName,
+            String lastName,
+            String email,
+            String icon,
+            String gamerTag,
+            int platformPoints,
+            Set<UUID> platformBenefits,
+            List<JpaGameEntity> games,
+            Set<JpaFriendRequest> incomingRequests,
+            List<JpaSectionEntity> sections,
+            String originalIcon, UUID activeProfilePictureId, UUID activeUsernameColorId
+    ) {
         this.id = id;
         this.firstName = firstName;
         this.lastName = lastName;
@@ -79,21 +95,27 @@ public class JpaProfileEntity {
         this.gamerTag = gamerTag;
         this.platformPoints = platformPoints;
         this.platformBenefits = platformBenefits;
-        this.games = library;
+        this.games = games;
         this.incomingRequests = incomingRequests;
         this.originalIcon = originalIcon;
         this.activeProfilePictureId = activeProfilePictureId;
         this.activeUsernameColorId = activeUsernameColorId;
+        this.sections = sections;
     }
 
     public static JpaProfileEntity fromDomain(Profile profile) {
+
         Set<JpaFriendRequest> incoming = profile.getIncomingFriendRequests().stream()
                 .map(JpaFriendRequest::from)
                 .collect(Collectors.toSet());
 
-        List<JpaGameEntity> jpaLibrary = profile.getGames().stream()
-                .map(games -> new JpaGameEntity(games.getGameId(), games.isFavorite()))
-                .collect(Collectors.toList());
+        List<JpaGameEntity> jpaGames = profile.getGames().stream()
+                .map(game -> new JpaGameEntity(game.getGameId(), game.isFavorite()))
+                .toList();
+
+        List<JpaSectionEntity> jpaSections = profile.getSections().stream()
+                .map(JpaSectionEntity::fromDomain)
+                .toList();
 
         return new JpaProfileEntity(
                 profile.getId().id(),
@@ -104,8 +126,9 @@ public class JpaProfileEntity {
                 profile.getGamerTag(),
                 profile.getPlatformPoints(),
                 profile.getPlatformBenefits(),
-                jpaLibrary,
+                jpaGames,
                 incoming,
+                jpaSections,
                 profile.getOriginalIcon(),
                 profile.getActiveProfilePictureId(),
                 profile.getActiveUsernameColorId()
@@ -113,12 +136,17 @@ public class JpaProfileEntity {
     }
 
     public Profile toDomain() {
+
         Set<FriendRequest> incoming = incomingRequests.stream()
                 .map(JpaFriendRequest::toDomain)
                 .collect(Collectors.toSet());
 
         List<Game> domainGames = games.stream()
                 .map(JpaGameEntity::toDomain)
+                .collect(Collectors.toList());
+
+        List<Section> domainSections = sections.stream()
+                .map(JpaSectionEntity::toDomain)
                 .collect(Collectors.toList());
 
         return new Profile(
@@ -132,6 +160,7 @@ public class JpaProfileEntity {
                 firstName,
                 domainGames,
                 incoming,
+                domainSections,
                 originalIcon,
                 activeProfilePictureId,
                 activeUsernameColorId
